--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "katex/dist/katex.min.css";
 
 @theme {
   --color-background: 255 255 255;
@@ -54,4 +55,12 @@ body {
 
 .animate-fade-in {
   animation: fade-in 0.4s ease-out;
+}
+
+.katex-container {
+  line-height: 1.2;
+}
+
+.katex-display {
+  margin: 0.5em 0;
 }
